tests/parsing/smtlib/mcil/errors/225_define-system_bad_attribute_2.mcil
(define-system sys :input () error)